# cumath

./: .gitignore  CMakeLists.txt  README.md  conv.cpp
src/: conv.cpp  cumath.cu
src/scan/: CMakeLists.txt
src/scan/src/: cumsum.cuh  utils.cuh
src/scan/tests/: TestCumsum.cu
tests/: CMakeLists.txt
